Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

COMMITERS

Do not forget to update this page on the wiki when making changes relevant to developers:
http://docs.joomla.org/index.php?title=Version_1.6_Developer_Notes

04-Feb-2009 Sam Moffatt
 # Fixed issue with temp and log paths not being displayed in the directory info tabs
 # Fixed issue with list of extensions not working properly
 ^ Installer SQL cleanup

01-Feb-2009 Sam Moffatt
 # Fixed issue with com_config loading incorrect language file
 + Added language override feature

01-Feb-2009 Andrew Eddie
 + Added User - Profile example plugin
 + Added jos_simple_templates and jos_user_profiles tables to install SQL
 + Added new utility class JSimpleTemplate
 + Added com_members
 
01-Feb-2009 Rob Schley
 $ First pass over localizing the invalid security token message. Added JINVALID_TOKEN language key.

30-Jan-2009 Ian MacLennan
 ^ Updated OpenID library to version 2.0.  Updated openid.js (for hiding and showing the openid logo) for MooTools 1.2.
 # Fixed issue with JMailHelper (ported from 1.5) that allows periods at the end of URLs (as per spec).

29-Jan-2009 Charl van Niekerk
 - Removed target="_blank" attributes from com_content.

29-Jan-2009 Andrew Eddie
 ^ [#14784] Move delete queries of messages from JTableUser to plugin

28-Jan-2009 Sam Moffatt
 # Fixed quirk with backup system not storing params and data properly for backup entries
 # Fixed issue with incorrect table name used
 + Created restore and remove functions for JBackupFilesystem

27-Jan-2009 Sam Moffatt
 ^ Changed in extension language system to use same file names instead of just xx-XX.ini
 ^ Changed data load adapter prefix to JDataLoader
 # Fixed issue with JFolder regexp's; now ignores backup files by default (files ending with a ~)
 ^ Improvements to the filesystem backup adapter